[package]
name = "redland-rs"
version = "0.1.0"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]

[dependencies]
ffi_utils = "~0.11.0"
libc = "~0.2.44"
rand = "~0.4.2"
rasqal-rs = { path = "../rasqal-rs", version = "0.1.0" }
routing = { path = "../routing", version = "~0.37.0" }
rust_sodium = "0.10.0"
unwrap = "~1.2.0"

[build-dependencies]
bindgen = "0.43.2"
